--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -7,11 +7,13 @@
     justify-content: center;
     align-items: center;
 }
-.todayName {
+.sub-header {
     position: absolute;
     size: 2em;
     top: 10%;
     left: 33%;
     transform: translateX(-50%);
     text-align: left;
+    display: flex; /* Add this line */
+    align-items: center; /* Optional: to align items vertically in the center */
 }
