--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -1,9 +1,9 @@
 .homepage-container {
     height: 100vh;
-    width: 100vw;
-
+    width: calc(100vw - 64px);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #1a1a1a;
 }
