--- a/src/components/update/Sidebar/sidebar.css
+++ b/src/components/update/Sidebar/sidebar.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 4rem 1rem 1rem 1rem;
+    padding: 6rem 1rem 1rem 1rem;
 }
 
 .sidebar-button {
@@ -21,12 +21,12 @@
 
     &:hover {
         background-color: rgba(255, 255, 255, 0.1);
-        border: none;
+        outline: none;
     }
 
     &:active {
         background-color: rgba(0, 225, 255, 0.1);
-        border: none;
+        outline: none;
     }
 
     &:focus {
