--- a/src/components/update/Sidebar/sidebar.css
+++ b/src/components/update/Sidebar/sidebar.css
@@ -1,10 +1,11 @@
 .sidebar {
     width: 64px;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 6rem 1rem 1rem 1rem;
+    padding: 4rem 1rem 1rem 1rem;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .sidebar-button {
