feat: added temporary icon pic button

--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -17,3 +17,6 @@
     display: flex; /* Add this line */
     align-items: center; /* Optional: to align items vertically in the center */
 }
+.logoButton {
+    
+}
