--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -22,6 +22,8 @@
     background-size: contain; 
     display: flex; 
     border-radius: 16px;
+    justify-content: center;
+    align-items: center;
     &:hover {
         background-color: rgba(255, 255, 255, 0.1);
         outline: none; 
