--- a/src/components/update/Sidebar/sidebar.css
+++ b/src/components/update/Sidebar/sidebar.css
@@ -9,7 +9,7 @@
     background-color: rgb(12, 12, 12);
 }
 
-.sidebar-button {
+.sidebar-button, .sidebar-add {
     width: 64px;
     height: 64px;
     display: flex;
@@ -20,7 +20,6 @@
     border-radius: 50%;
     margin-bottom: 1rem;
     transition: all 0.25s;
-    background-color: rgb(24, 24, 24);
 
     i {
         font-size: 1.2rem;
@@ -30,22 +29,28 @@
         border-radius: 45%;
         outline: none;
     }
-
-    &:hover {
-        background-color: rgba(255, 255, 255, 0.1);
-    }
-
-    &:active {
-        background-color: rgb(0, 115, 255);
-    }
-
-    &:focus {
-        background-color: rgb(0, 115, 255);
-    }
 }
 
+.sidebar-button {
+    background-color: rgb(24, 24, 24);
+  
+    &:hover {
+      background-color: rgb(29, 38, 52);
+    }
+  
+    &.sidebar-selected {
+      &:hover {
+        background-color: rgba(0, 115, 255, 0.8);
+      }
+    }
+  
+    &:active, &:focus {
+      background-color: rgb(0, 115, 255);
+    }
+  }
+
 .sidebar-add {
-    background-color: rgba(148, 63, 60, 0.6);
+    background-color: rgba(148, 63, 60, 0.4);
 
     i {
         font-size: 1.8rem;
@@ -55,11 +60,7 @@
         background-color: rgba(148, 63, 60, 0.8);
     }
 
-    &:active {
-        background-color: rgb(148, 63, 60);
-    }
-
-    &:focus {
+    &:active, &:focus {
         background-color: rgb(148, 63, 60);
     }
 }
@@ -72,4 +73,9 @@
 .sidebar-add-selected {
     background-color: rgb(148, 63, 60);
     border-radius: 45%;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
