--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  /* background-color: #242424; */
-  /* background-color: transparent; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,9 +22,9 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
+/* a:hover {
   color: #535bf2;
-}
+} */
 
 body {
   margin: 0;
@@ -36,13 +34,17 @@ body {
   min-height: 100vh;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
+button, input {
+  border-radius: 16px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -50,14 +52,22 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  transition: border-color, background-color 0.2s ease-in-out;
+  outline: none; 
+  border: none;
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    outline: none; 
+    border: none;
+  }
+  &:focus {
+    outline: none;
+    border: none;
+  }
+  &:active {
+      outline: none;
+      border: none;
+  }
 }
 
 code {
@@ -100,5 +110,6 @@ code {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100vw;
   overflow: hidden;
 }
