feat: enable translucency

--- a/src/components/TimeFlow/timeflow.css
+++ b/src/components/TimeFlow/timeflow.css
@@ -6,7 +6,7 @@
     padding: 4rem 1rem 1rem 1rem;
     height: 100vh;
     overflow: hidden;
-    background-color: rgb(12, 12, 12);
+    background-color: #121212;
 }
 
 .sidebar-button, .sidebar-add {
