--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,8 @@ h1 {
   line-height: 1.1;
 }
 
-button, input {
+button,
+input {
   border-radius: 16px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -53,11 +54,11 @@ button, input {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color, background-color 0.2s ease-in-out;
-  outline: none; 
+  outline: none;
   border: none;
   &:hover {
     background-color: rgba(255, 255, 255, 0.1);
-    outline: none; 
+    outline: none;
     border: none;
   }
   &:focus {
@@ -65,8 +66,8 @@ button, input {
     border: none;
   }
   &:active {
-      outline: none;
-      border: none;
+    outline: none;
+    border: none;
   }
 }
 
