--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     /* background-color: #1a1a1ae5; */
-    background-color: #1a1a1a;
+    background-color: #161616;
 }
 .page-content, .search-page-content {
     position: relative;
