--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -7,6 +7,8 @@
     align-items: center;
     /* background-color: #1a1a1ae5; */
     background-color: #161616;
+
+    padding-bottom: 15px;
 }
 .page-content, .search-page-content {
     position: relative;
