--- a/src/pages/Search/search.css
+++ b/src/pages/Search/search.css
@@ -6,6 +6,5 @@
   background-color: rgba(255, 255, 255, 0.05);
   padding: 12px 16px;
   margin-top: -8px;
-
-  cursor: text;
+  margin-bottom: 10px;
 }
