--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -34,15 +34,15 @@
     width: 10px;
   }
   
-  ::-webkit-scrollbar-track {
-    background: #333; 
-  }
-  
   ::-webkit-scrollbar-thumb {
-    background: #666; 
+    background: #262626; 
+    border-radius: 10px;
+    margin-right: 4px;
   }
   
   ::-webkit-scrollbar-thumb:hover {
-    background: #999; 
+    background: #2f2f2f; 
+    border-radius: 10px;
+    margin-right: 4px;
   }
   
