--- a/src/components/TimeFlow/timeflow.css
+++ b/src/components/TimeFlow/timeflow.css
@@ -2,11 +2,21 @@
     width: 64px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     padding: 4rem 1rem 1rem 1rem;
     height: 100vh;
     overflow: hidden;
     background-color: #0a0a0a;
+}
+
+.sidebar-bottom {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+    padding-bottom: 32px;
 }
 
 .sidebar-button, .sidebar-add {
