--- a/src/pages/Account/account.css
+++ b/src/pages/Account/account.css
@@ -13,6 +13,7 @@
     align-items: center;
     width: calc(100vw - 96px - 64px - 52px);
     justify-content: space-between;
+    padding-bottom: 8px;
 }
 
 .login-form {
