--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -5,9 +5,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* background-color: #1a1a1ae5; */
     background-color: #161616;
 }
+
+.auth-page-container {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #161616;
+}
+
 .page-content, .search-page-content {
     position: relative;
     display: flex;
