--- a/src/components/update/ListView/listview.css
+++ b/src/components/update/ListView/listview.css
@@ -63,10 +63,21 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: 2px 6px;
+    padding: 2px 8px;
     margin-left: 8px;
     border-radius: 8px;
     background-color: rgba(255, 255, 255, 0.08);
+}
+
+.list-view-item {
+    /* background-color: transparent; */
+    background-color: rgba(255, 255, 255, 0.025);
+    border: 1px solid rgba(255, 255, 255, 0.08);
+}
+
+.list-view-item:hover {
+    background-color: rgba(255, 255, 255, 0.05);
+    box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
 }
 
 .container {
@@ -119,4 +130,24 @@
 .round input:hover + label {
     scale: 1.05;
     transition: scale 0.25s ease-in-out;
+}
+
+@media (prefers-color-scheme: light) {
+    .list-view-item {
+        border: 1px solid rgba(0, 0, 0, 0.08);
+        background-color: rgb(0, 0, 0, 0.025);
+    }
+
+    .list-view-item:hover {
+        background-color: rgb(0, 0, 0, 0.005);
+        box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
+    }
+
+    .list-view-item-label {
+        background-color: rgba(0, 0, 0, 0.08);
+    }
+
+    * {
+        color: #213547;
+    }
 }
