--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,24 @@ input {
   }
 }
 
+input,
+button {
+  /* background-color: rgba(255, 255, 255, 0.05); */
+  /* background-color: transparent; */
+  background-color: rgba(255, 255, 255, 0.025);
+  border: 1px solid rgba(255, 255, 255, 0.08);
+}
+
+input:hover,
+button:hover,
+input:focus {
+  background-color: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
+  scale: 1.001;
+  transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+}
+
 input {
   cursor: text;
 }
@@ -97,9 +115,23 @@ code {
   a:hover {
     color: #747bff;
   }
+  input,
   button {
-    background-color: #f9f9f9;
+    /* background-color: rgb(255, 255, 255); */
+    background-color: rgb(0, 0, 0, 0.025);
+    border: 1px solid rgba(0, 0, 0, 0.08);
   }
+
+  input:hover,
+  button:hover,
+  input:focus {
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
+    scale: 1.001;
+    transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+  }
+
   code {
     background-color: #f9f9f9;
   }
@@ -111,6 +143,12 @@ code {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  width: 100vw;
   overflow: hidden;
+}
+
+*,
+a,
+button {
+  cursor: default;
+  user-select: none;
 }
