--- a/src/pages/Add/add.css
+++ b/src/pages/Add/add.css
@@ -7,9 +7,12 @@
     padding-bottom: 16px;
     padding-top: 24px;
     border-radius: 16px;
-    background-color: rgba(255, 255, 255, 0.05);
+    /* background-color: rgba(255, 255, 255, 0.05); */
+    /* background-color: transparent; */
+    background-color: rgba(255, 255, 255, 0.025);
+    border: 1px solid rgba(255, 255, 255, 0.08);
   }
-  
+
   .add-task-form-item-row {
     display: flex;
     flex-direction: row;
@@ -108,7 +111,81 @@
     width: calc(100%);
   }
 
+  .add-task-form-submit:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+
   .dropdown {
     position: relative;
     display: inline-block;
+  }
+
+  /* light mode */
+  @media (prefers-color-scheme: light) {
+    .add-task-form {
+      background-color: rgba(0, 0, 0, 0.025);
+    }
+
+    .add-task-form {
+      background-color: rgb(0, 0, 0, 0.025);
+      border: 1px solid rgba(0, 0, 0, 0.08);
+  }
+  
+    .add-task-form-item-row {
+      input {
+          background-color: rgba(0, 0, 0, 0.05);
+      }
+  
+      input:hover {
+          background-color: rgb(255, 255, 255);
+      }
+  
+      select {
+          background-color: rgba(0, 0, 0, 0.05);
+      }
+  
+      select:hover {
+          background-color: rgb(255, 255, 255);
+      }
+    }
+    
+    .add-task-form-item-top {
+      input {
+          background-color: rgba(0, 0, 0, 0.05);
+      }
+  
+      input:hover {
+        background-color: rgb(255, 255, 255);
+      }
+  
+      select {
+          background-color: rgba(0, 0, 0, 0.05);
+      }
+  
+      select:hover {
+        background-color: rgb(255, 255, 255);
+      }
+    }
+  
+    .add-task-form-item {
+      input {
+          background-color: rgba(0, 0, 0, 0.05);
+      }
+  
+      input:hover {
+        background-color: rgb(255, 255, 255);
+      }
+  
+      select {
+          background-color: rgba(0, 0, 0, 0.05);
+      }
+  
+      select:hover {
+        background-color: rgb(255, 255, 255);
+      }
+    }
+  
+    .add-task-form-submit {
+      background-color: rgba(0, 0, 0, 0.05);
+    }
   }
