--- a/src/pages/Search/search.css
+++ b/src/pages/Search/search.css
@@ -3,7 +3,9 @@
   flex-direction: row;
   align-items: center;
   width: calc(100vw - 96px - 96px);
-  background-color: rgba(255, 255, 255, 0.05);
+  /* background-color: rgba(255, 255, 255, 0.05); */
+  /* background-color: transparent; */
+  /* background-color: rgba(255, 255, 255, 0.025); */
   padding: 12px 16px;
   margin-bottom: 10px;
 }
