--- a/src/components/update/PageHeader/pageheader.css
+++ b/src/components/update/PageHeader/pageheader.css
@@ -1,11 +1,11 @@
 .header-bar {
-    position: relative;
-    text-align: left;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: calc(100vw - 96px - 64px);
-    padding-top: 8px;
-    margin-bottom: -8px;
-    user-select: none;
+  position: relative;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: calc(100% - 64px);
+  padding-top: 8px;
+  margin-bottom: -8px;
+  user-select: none;
 }
