--- a/src/pages/Account/account.css
+++ b/src/pages/Account/account.css
@@ -1,58 +1,77 @@
 .login-form-item {
-    margin-bottom: 10px;
-    width: calc(100% - 52px);
-    input {
-        background-color: rgba(255, 255, 255, 0.05);
-        width: calc(100% - 40px);
-    }
+  margin-bottom: 10px;
+  width: calc(100% - 52px);
+  input {
+    background-color: rgba(255, 255, 255, 0.025);
+    width: calc(100% - 40px);
+  }
 }
 
 .login-form-item-row {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: calc(100vw - 96px - 64px - 52px);
-    justify-content: space-between;
-    padding-bottom: 8px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* width: calc(100vw - 96px - 128px - 52px); */
+  width: calc(100% - 52px);
+  justify-content: space-between;
+  padding-bottom: 8px;
 }
 
 .login-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: calc(100vw - 96px - 64px);
-    padding-bottom: 16px;
-    padding-top: 24px;
-    border-radius: 16px;
-    background-color: rgba(255, 255, 255, 0.05);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* width: calc(100vw - 96px - 128px); */
+  width: 100%;
+  padding-bottom: 16px;
+  padding-top: 24px;
+  border-radius: 16px;
+  background-color: rgba(255, 255, 255, 0.025);
+  border: 1px solid rgba(255, 255, 255, 0.08);
 }
 
 .login-form-bottom-right {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: center;
-    button {
-        margin-left: 10px;
-    }
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: center;
+  button {
+    margin-left: 10px;
+  }
 }
 
 .login-form-bottom-left {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.auth-page-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+  align-items: center;
+  width: calc(100vw - 64px);
+  height: 100%;
+  user-select: none;
+  padding-bottom: 36px;
 }
 
 @media (prefers-color-scheme: light) {
-    .login-form {
-        background-color: rgba(0, 0, 0, 0.05);
-    }
+  .login-form {
+    background-color: rgba(0, 0, 0, 0.025);
+    border: 1px solid rgba(0, 0, 0, 0.08);
+  }
 
-    .login-form-item {
-        input {
-            background-color: rgba(0, 0, 0, 0.05);
-        }
+  .login-form-item {
+    input {
+      background-color: rgba(0, 0, 0, 0.05);
+      &:hover {
+        background-color: rgb(255, 255, 255);
+      }
     }
+  }
 }
