--- a/src/components/update/ListView/listview.css
+++ b/src/components/update/ListView/listview.css
@@ -1,153 +1,173 @@
 .list-view-item {
-    display: flex;
-    flex-direction: row;
-    align-items: left;
+  display: flex;
+  flex-direction: row;
+  align-items: left;
+  /* width: calc(100vw - 96px - 90px); */
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-right: 24px;
+  list-style: none;
+  border-radius: 16px;
+  background-color: rgba(255, 255, 255, 0.05);
+  transition: background-color 0.25s;
+  /* margin-bottom: 10px; */
+}
+
+@media (max-width: 1024px) {
+  .list-view-item {
     width: calc(100vw - 96px - 90px);
-    padding-top: 16px;
-    padding-bottom: 16px;
-    padding-right: 24px;
-    list-style: none;
-    border-radius: 16px;
-    background-color: rgba(255, 255, 255, 0.05);
-    transition: background-color 0.25s;
-    margin-bottom: 10px;
+  }
 }
 
 .list-view-item:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-    box-shadow: 0px 4px 16px -4px rgba(0, 0, 0, 0.25);
-    scale: 1.001;
-    transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 0px 4px 16px -4px rgba(0, 0, 0, 0.25);
+  scale: 1.001;
+  transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
 }
 
 .list-view-item-left {
-    width: 40px;
-    margin-left: 20px;
-    padding-top: 8px;
+  flex: 0 0 auto;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-top: 8px;
 }
 
 .list-view-item-right {
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    width: calc(100vw - 96px - 96px - 40px);
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: right;
+  width: inherit;
 }
 
-.list-view-item-top, .list-view-item-bottom {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.list-view-item-top,
+.list-view-item-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .list-view-item-title {
-    font-size: 20px;
-    font-weight: 600;
+  font-size: 20px;
+  font-weight: 600;
 }
 
-.list-view-item-description, .list-view-item-date {
-    font-size: 16px;
-    font-weight: 400;
+.list-view-item-description,
+.list-view-item-date {
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .list-view-item-labels {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: right;
-    font-size: 14px;
-    font-weight: 600;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: right;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 .list-view-item-label {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 2px 8px;
-    margin-left: 8px;
-    border-radius: 8px;
-    background-color: rgba(255, 255, 255, 0.08);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 2px 8px;
+  margin-left: 8px;
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.08);
 }
 
 .list-view-item {
-    /* background-color: transparent; */
-    background-color: rgba(255, 255, 255, 0.025);
-    border: 1px solid rgba(255, 255, 255, 0.08);
+  /* background-color: transparent; */
+  background-color: rgba(255, 255, 255, 0.025);
+  border: 1px solid rgba(255, 255, 255, 0.08);
 }
 
 .list-view-item:hover {
-    background-color: rgba(255, 255, 255, 0.05);
-    box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.05);
+  box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
+}
+
+.list-view-container {
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(500px, 1fr)
+  ); /* Adjust the width as needed */
+  grid-gap: 10px;
+  width: calc(100% - 64px);
 }
 
 .container {
-    margin: 0 auto;
-  }
+  margin: 0 auto;
+}
 
 .round {
-    position: relative;
+  position: relative;
 }
-  
+
 .round label {
-    background-color: #00000000;
-    border: 3px solid #a04242;
-    border-radius: 50%;
-    cursor: pointer;
-    height: 16px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 16px;
+  background-color: #00000000;
+  border: 3px solid #a04242;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 16px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 16px;
 }
 
 .round label:after {
-    border: 2px solid #fff;
-    border-top: none;
-    border-right: none;
-    content: "";
-    height: 4px;
-    left: 3px;
-    opacity: 0;
-    position: absolute;
-    top: 4px;
-    transform: rotate(-45deg);
-    width: 8px;
+  border: 2px solid #fff;
+  border-top: none;
+  border-right: none;
+  content: "";
+  height: 4px;
+  left: 3px;
+  opacity: 0;
+  position: absolute;
+  top: 4px;
+  transform: rotate(-45deg);
+  width: 8px;
 }
-  
+
 .round input[type="checkbox"] {
-    visibility: hidden;
+  visibility: hidden;
 }
-  
+
 .round input[type="checkbox"]:checked + label {
-    background-color: #4da151;
-    border-color: #4da151;
+  background-color: #4da151;
+  border-color: #4da151;
 }
-  
+
 .round input[type="checkbox"]:checked + label:after {
-    opacity: 1;
+  opacity: 1;
 }
 
 .round input:hover + label {
-    scale: 1.05;
-    transition: scale 0.25s ease-in-out;
+  scale: 1.05;
+  transition: scale 0.25s ease-in-out;
 }
 
 @media (prefers-color-scheme: light) {
-    .list-view-item {
-        border: 1px solid rgba(0, 0, 0, 0.08);
-        background-color: rgb(0, 0, 0, 0.025);
-    }
+  .list-view-item {
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    background-color: rgb(0, 0, 0, 0.025);
+  }
 
-    .list-view-item:hover {
-        background-color: rgb(0, 0, 0, 0.005);
-        box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
-    }
+  .list-view-item:hover {
+    background-color: rgb(0, 0, 0, 0.005);
+    box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
+  }
 
-    .list-view-item-label {
-        background-color: rgba(0, 0, 0, 0.08);
-    }
+  .list-view-item-label {
+    background-color: rgba(0, 0, 0, 0.08);
+  }
 
-    * {
-        color: #213547;
-    }
+  * {
+    color: #213547;
+  }
 }
