--- a/src/index.css
+++ b/src/index.css
@@ -121,10 +121,10 @@ code {
     background-color: rgb(0, 0, 0, 0.025);
     border: 1px solid rgba(0, 0, 0, 0.08);
   }
-
   input:hover,
   button:hover,
-  input:focus {
+  input:focus,
+  button:focus {
     background-color: rgb(255, 255, 255);
     border: 1px solid rgba(0, 0, 0, 0.08);
     box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
