--- a/src/components/update/ListView/listview.css
+++ b/src/components/update/ListView/listview.css
@@ -28,8 +28,8 @@
 
 .list-view-item-left {
   flex: 0 0 auto;
-  margin-left: 20px;
-  margin-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   padding-top: 8px;
 }
 
@@ -92,12 +92,13 @@
 
 .list-view-container {
   display: grid;
+  grid-gap: 10px;
+  width: calc(100% - 64px);
   grid-template-columns: repeat(
     auto-fill,
     minmax(500px, 1fr)
-  ); /* Adjust the width as needed */
-  grid-gap: 10px;
-  width: calc(100% - 64px);
+  );
+
 }
 
 .container {
