--- a/src/pages/Search/search.css
+++ b/src/pages/Search/search.css
@@ -2,10 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: calc(100vw - 96px - 96px);
-  /* background-color: rgba(255, 255, 255, 0.05); */
-  /* background-color: transparent; */
-  /* background-color: rgba(255, 255, 255, 0.025); */
+  width: calc(100% - 96px);
   padding: 12px 16px;
   margin-bottom: 10px;
 }
