--- a/src/pages/Add/add.css
+++ b/src/pages/Add/add.css
@@ -72,6 +72,9 @@
         background-color: rgba(255, 255, 255, 0.1);
     }
   }
+  #priority option[value=""]:hover{
+    display: none;
+  }
 
   .add-task-form-item {
     margin-bottom: 10px; /* Adjust spacing between form items */
