--- a/src/pages/Add/add.css
+++ b/src/pages/Add/add.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: calc(100vw - 96px - 64px);
+    width: calc(100% - 64px);
     padding-bottom: 16px;
     padding-top: 24px;
     border-radius: 16px;
