--- a/src/components/update/ListView/listview.css
+++ b/src/components/update/ListView/listview.css
@@ -5,12 +5,18 @@
   /* width: calc(100vw - 96px - 90px); */
   padding-top: 16px;
   padding-bottom: 16px;
-  padding-right: 24px;
+  padding-right: 16px;
   list-style: none;
   border-radius: 16px;
   background-color: rgba(255, 255, 255, 0.05);
   transition: background-color 0.25s;
   /* margin-bottom: 10px; */
+  .bi-trash3-fill {
+    margin-left: 16px;
+  }
+  button {
+    border-radius: 8px;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -151,6 +157,10 @@
 .round input:hover + label {
   scale: 1.05;
   transition: scale 0.25s ease-in-out;
+}
+
+.bi-three-dots {
+  color: lightblue;
 }
 
 @media (prefers-color-scheme: light) {
