--- a/src/components/update/ListView/listview.css
+++ b/src/components/update/ListView/listview.css
@@ -100,11 +100,7 @@
   display: grid;
   grid-gap: 10px;
   width: calc(100% - 64px);
-  grid-template-columns: repeat(
-    auto-fill,
-    minmax(500px, 1fr)
-  );
-
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
 }
 
 .container {
