--- a/src/index.css
+++ b/src/index.css
@@ -51,16 +51,11 @@ input {
   cursor: pointer;
   transition: border-color, background-color 0.2s ease-in-out;
   outline: none;
-  border: none;
   &:hover {
     background-color: rgba(255, 255, 255, 0.1);
-    outline: none;
-    border: none;
   }
-  &:focus {
-    outline: none;
-    border: none;
-  }
+  &:focus,
+  &:hover,
   &:active {
     outline: none;
     border: none;
@@ -77,7 +72,8 @@ button {
 
 input:hover,
 button:hover,
-input:focus {
+input:focus,
+button:focus {
   background-color: rgba(255, 255, 255, 0.05);
   border: 1px solid rgba(255, 255, 255, 0.08);
   box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
