--- a/src/components/update/TaskDetails/taskDetails.css
+++ b/src/components/update/TaskDetails/taskDetails.css
@@ -3,4 +3,38 @@ select#labels,
 select#priority {
   height: 42px;
   border: 1px solid rgba(255, 255, 255, 0.08);
+  transition: 0.25s;
+}
+
+select:hover,
+select#labels:hover,
+select#priority:hover,
+button:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
+  scale: 1.001;
+  transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+}
+
+/* light mode */
+@media (prefers-color-scheme: light) {
+  select,
+  select#labels,
+  select#priority {
+    background-color: rgb(0, 0, 0, 0.05) !important;
+    border: 1px solid rgba(0, 0, 0, 0.08) !important;
+  }
+  
+  select:hover,
+  select#labels:hover,
+  select#priority:hover,
+  button:hover {
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
+    scale: 1.001;
+    transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+  }
+  
 }
