--- a/src/pages/Add/add.css
+++ b/src/pages/Add/add.css
@@ -37,6 +37,7 @@
     padding-left: 16px;
     outline: none;
     border: 1px solid rgba(255, 255, 255, 0.08);
+    transition: 0.25s;
   }
 
   select:hover,
@@ -44,6 +45,7 @@
   select#priority:hover,
   button:hover {
     background-color: rgba(255, 255, 255, 0.1);
+    transition: 0.25s;
   }
 }
 
@@ -187,5 +189,18 @@
 
   .add-task-form-submit {
     background-color: rgba(0, 0, 0, 0.05);
+  }
+
+  .add-task-form {
+    select:hover,
+    select#labels:hover,
+    select#priority:hover,
+    button:hover {
+      background-color: rgb(255, 255, 255) !important;
+      border: 1px solid rgba(0, 0, 0, 0.08) !important;
+      box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1) !important;
+      scale: 1.001;
+      transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+    }
   }
 }
