--- a/src/index.css
+++ b/src/index.css
@@ -73,12 +73,19 @@ button {
 input:hover,
 button:hover,
 input:focus,
-button:focus {
-  background-color: rgba(255, 255, 255, 0.05);
+button:focus,
+input:active,
+button:active {
+  background-color: rgba(255, 255, 255, 0.025);
   border: 1px solid rgba(255, 255, 255, 0.08);
   box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
   scale: 1.001;
   transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+}
+
+input:focus,
+button:focus   {
+  background-color: rgba(255, 255, 255, 0.1) !important;
 }
 
 input {
@@ -117,15 +124,21 @@ code {
     background-color: rgb(0, 0, 0, 0.025);
     border: 1px solid rgba(0, 0, 0, 0.08);
   }
+
   input:hover,
   button:hover,
   input:focus,
-  button:focus {
-    background-color: rgb(255, 255, 255);
+  button:focus,
+  input:active,
+  button:active {
     border: 1px solid rgba(0, 0, 0, 0.08);
     box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
     scale: 1.001;
     transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+  }
+
+  input:focus {
+    background-color: rgb(255, 255, 255) !important;
   }
 
   code {
